--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@ body{
   flex-direction: column;
   align-items: center;
 }
+
 .nav{
   width: 100%;
   height: 50px;
@@ -24,6 +25,12 @@ body{
   top: 0;
 }
 
+.indian{
+  border: 2px solid black;
+  background: grey;
+  margin-top: 20px;
+}
+
 h1{
   padding-left: 0.5em;
     text-align: center;
@@ -31,6 +38,13 @@ h1{
     display: inline;
     padding-right: 0.5em;
   }
+
+.indian-singer{
+  text-align: center;
+  font-size: 3em;
+  width: 98%;
+  border: 2px solid black;
+}
 
 .logo{
   width: 30%;
@@ -67,17 +81,19 @@ h2{
   font-size: 1.5em;
   padding-top: 2em;
 }
-.menu-items{
+
+.singers{
   width: 100%;
   justify-content: center;
   padding: 1em;
   margin: auto;
 }
-.item-tile{
+.singer-tile{
   margin: 0.8em;
   float: left;
   box-shadow: 1px 1px 5px 1px grey;
   box-sizing: border-box;
+  border: 1px solid black;
 }
 
 .item-img{
@@ -90,25 +106,13 @@ h2{
   width: 100%;
   height: 30px;
   margin-top: -30px;
-  padding: 0.5em 0.5em 0 0.5em;
+  /*padding: 0.5em 0.5em 0 0.5em;*/
   text-align: center;
   color: #fff;
   background: black;
-  opacity: 0.8;
-}
-.feedback{
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  opacity: 0.9;
 }
 
-.h2{
-  font-size: 1.5em;
-}
-.quote{
-  padding: 2em;
-}
 .footer{
   width: 100%;
   padding: 1em;
@@ -118,6 +122,11 @@ h2{
   background: black;
   color: white;
 }
+
+span{
+  color: blue;
+}
+
 .title{
   color:white;
   text-align: center;
@@ -129,13 +138,13 @@ input{
 }
 
 @media (max-width: 768){
-  .item-tile{
+  .singer-tile{
     width: 100%;
   }
 }
 
 @media screen and (min-width: 769px){
-  .item-tile{
+  .singer-tile{
     width: 30%;
   }
 }
